# src/main/resources/openapi.yml
@@ -53,6 +53,71 @@ components:
           type: string
           description: Sort direction for price (optional).
           enum: [ "ASC", "DESC" ]
+    ResponseFullMovie:
+      type: object
+      properties:
+        id:
+          type: integer
+        nameUkrainian:
+          type: string
+        nameNative:
+          type: string
+        yearOfRelease:
+          type: integer
+          format: int32
+        description:
+          type: string
+        rating:
+          type: number
+          format: double
+        price:
+          type: number
+          format: double
+        picturePath:
+          type: string
+        genres:
+          type: array
+          items:
+            $ref: '#/components/schemas/ResponseGenre'
+        countries:
+          type: array
+          items:
+            $ref: '#/components/schemas/ResponseCountry'
+        reviews:
+          type: array
+          items:
+            $ref: '#/components/schemas/ResponseReview'
+    ResponseCountry:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+          description: Unique country identifier
+        name:
+          type: string
+          description: Country name
+
+    ResponseReview:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+          description: Unique review identifier
+        user:
+          type: object
+          properties:
+            id:
+              type: integer
+              format: int32
+              description: Unique user identifier
+            nickname:
+              type: string
+              description: User's nickname
+        text:
+          type: string
+          description: Review text
 
     ProblemDetails:
       required:
@@ -396,7 +461,51 @@ paths:
           $ref: '#/components/responses/UnprocessableEntity'
         '500':
           $ref: '#/components/responses/InternalServerError'
+  '/movie/{movieId}':
+    get:
+      description: |
+        Get movie by id.
 
+        The GET method finds one movie by id.
+      summary: Get movie
+      operationId: getMovieById
+      tags:
+        - Movie
+      parameters:
+        - name: movieId
+          in: path
+          required: true
+          description: ID of the movie
+          schema:
+            type: integer
+            format: int32
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ResponseFullMovie'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/Forbidden'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '405':
+          $ref: '#/components/responses/MethodNotAllowed'
+        '406':
+          $ref: '#/components/responses/NotAcceptable'
+        '409':
+          $ref: '#/components/responses/Conflict'
+        '416':
+          $ref: '#/components/responses/RequestedRangeNotSatisfiable'
+        '422':
+          $ref: '#/components/responses/UnprocessableEntity'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
   '/genre':
     get:
       description: |
